# cv-maker

./: CLAUDE.md  README.md  Untitled.ipynb  main.py  pyproject.toml  render.yaml  todo.md
backend/: .env  .env.example  LEGO_BLOCKS_README.md  auth.py  browser_fetcher.py  cover_letter_generator.py  crud.py  cv_generator.py  database.py  import_cv_data.py  job_parser.py  lego_blocks.py  main.py  message_generator.py  models.py  requirements.txt  schemas.py  tax_calculator.py  test_lego_blocks.py
backend/debug/: last_response.html
backend/migrations/: 001_add_enhanced_features.sql  001_add_jobhunt_tables.sql  002_add_workplace_employment.sql  003_add_contact_tracking.sql  README.md
backend/parsers/: __init__.py  linkedin_parser.py
backend/scripts/: __init__.py  import_lego_blocks.py
frontend/: .env.production  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CVGenerator.tsx  CoverLetterEditor.tsx  FollowUpModal.tsx  JobForm.tsx  JobList.tsx  JobView.tsx  LegoBlockBrowser.tsx  SalaryCalculator.tsx  StalenessIndicator.tsx
frontend/src/components/pdf/: CVTemplate.tsx  CoverLetterTemplate.tsx
frontend/src/services/: api.ts  pdfGenerator.ts
frontend/src/types/: coverLetter.ts  cv.ts  job.ts  legoBlock.ts
