[project]
name = "cv-maker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.72.0",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.1",
    "passlib[bcrypt]>=1.7.4",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
